************************
*** PMF
***
************************

### Libraries

- porousMediumModel(s)

  - new abstract for handling simple/dual porosity models

- simplePorosity

  - porousMedium class for one porosity model (one Saturation, kr, pc...)

- relativePermeability/capillarity:

  - Smin/Smax are common to all kr/pc model and included in general abstract. As
  a consequence, values are now read in the model dictionary (and not from the
  global transportProperties dict). For example, the thetamin value for
  Van Genuchten model is read in VanGenuchtenCoeffs.

### Solvers

- steadyGroundwaterFoam/groundwaterFoam

  - solvers have been merged. Steady simulations can be done using -steady
  option, i.e. :
       groundwaterFoam -steady
       
- steadyGroundwater2DFoam/groundwater2DFoam

  - solvers have been merge. Steady simulations can be done using -steady
  option, i.e. :
       groundwater2DFoam -steady

### Minor changes

- massConservativeTerm has been replaced by

- new kr(volfield) function added to relativePermeability classes to compute
  relative permeability from a given saturation

- new S(volfield) function added to capillaryModel classes to compute saturation
  from a given pressure head field

************************
*** PMFv2107.2
*** Minor fixes for PMFv2107.1
************************

### Bug fixes

- timeStepManager

  - there was issues for derivative computation when running on multiple cores.
  timeStepManager class now uses reduce function.

- sourceEventFile / 2D fixed points

  - parallel issues for source injection and potential fixed points.

************************
*** PMFv2107.2
*** Minor fixes for PMFv2107.1
************************

### Utilities

- subsetMeshFromDEM

  - Generate automatically a subsetMesh using two DEM files, respectively for
    the top and the bottom of the aquifer:

    subsetMeshFromDEM /patch/to/file/top.xyz /patch/to/file/bottom.xyz

    two patches are automatically generated: top and bottom.
